--- a/layout/Layout.module.scss
+++ b/layout/Layout.module.scss
@@ -1,8 +1,28 @@
 .mains {
   width: 100%;
+  height: 100%;
   display: flex;
 
   .children {
     width: 100%;
+
+    .tags {
+      position: absolute;
+      color: #ffd700;
+      opacity: 0.6;
+      bottom: 0;
+      left: 120px;
+      font-size: 18px;
+      font-family: 'La Belle Aurore';
+    }
+
+    .top-tags {
+      bottom: auto;
+      top: 20px;
+    }
+
+    .bottom-tags-html {
+      margin-left: -20px;
+    }
   }
 }
