--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -51,6 +51,18 @@
       transition: all 0.3s ease-in;
     }
 
+    .nav-desc {
+      margin-top: -20px;
+      font-size: 1.4rem;
+      font-family: sans-serif;
+      opacity: 0;
+
+      & :hover {
+        opacity: 1;
+        color: #ffd700;
+      }
+    }
+
     & :hover {
       color: #ffd700;
       cursor: pointer;
