--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -14,6 +14,7 @@
     margin: 0;
     font-family: 'Coolvetica';
     font-weight: 400;
+    letter-spacing: 2px;
 
     &::before {
       content: '<h1>';
@@ -22,7 +23,7 @@
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
-      left: 15px;
+      left: -10px;
       opacity: 0.6;
     }
 
@@ -33,7 +34,7 @@
       font-size: 18px;
       position: absolute;
       margin-top: 18px;
-      margin-left: 20px;
+      margin-left: -10px;
       animation: fadeIn 1s 1.7s backwards;
       opacity: 0.6;
     }
@@ -41,7 +42,7 @@
 
   h2 {
     color: #fff;
-    margin-top: 20px;
+    margin-top: 50px;
     font-weight: 400;
     font-size: 14px;
     font-family: sans-serif;
@@ -58,9 +59,10 @@
     text-decoration: none;
     padding: 10px 18px;
     border: 1px solid #ffd700;
-    margin-top: 25px;
+    margin-top: 10px;
     float: left;
-    animation: fadeIn 1s 1.8s backwards;
+    animation: fadeIn 1s 2s backwards;
+    transition: 0.3s ease-in;
     white-space: nowrap;
     cursor: pointer;
 
