add contact page

--- a/components/pages/about/About.module.scss
+++ b/components/pages/about/About.module.scss
@@ -1,7 +1,7 @@
 .about-page {
   .text-zone {
     position: absolute;
-    left: 10%;
+    left: 13%;
     top: 48%;
     transform: translateY(-50%);
     width: 40%;
@@ -124,7 +124,7 @@
 
   .face1 {
     transform: rotateY(1deg) translateZ(100px);
-    color: #000000;
+    color: #2ec42e;
   }
   .face2 {
     transform: rotateY(90deg) translateZ(100px);
