--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -1,7 +1,7 @@
 .home-page {
   .text-zone {
     position: absolute;
-    left: 10%;
+    left: 13%;
     top: 50%;
     transform: translateY(-50%);
     width: 40%;
@@ -28,7 +28,7 @@
     }
 
     &::after {
-      content: '<h1>';
+      content: '</h1>';
       font-family: 'La Belle Aurore';
       color: #ffd700;
       font-size: 18px;
