--- a/components/animatedLetters/AnimateLetters.module.scss
+++ b/components/animatedLetters/AnimateLetters.module.scss
@@ -3,7 +3,7 @@
   opacity: 0;
   animation: bounceIn;
   animation-duration: 1s;
-  animation-delay: 1s;
+  animation-delay: 0.3s;
   animation-fill-mode: forwards;
   min-width: 10px;
 }
@@ -14,8 +14,9 @@
   animation-fill-mode: both;
 
   &:hover {
-    animation: rubberBand 1s;
+    animation: rubberBand 0.4s;
     color: #ffd700;
+    cursor: none;
   }
 }
 
