--- a/components/pages/about/About.module.scss
+++ b/components/pages/about/About.module.scss
@@ -50,16 +50,18 @@
       font-weight: 400;
       max-width: fit-content;
       line-height: 1.8rem;
-      animation: pulse 1s;
+      animation-name: pulse;
+      animation-duration: 1s;
+      animation-fill-mode: forwards;
 
-      &:nth-of-type(1) {
-        animation-delay: 1.1s;
+      &:nth-child(1) {
+        animation-delay: 1.2s;
       }
-      &:nth-of-type(2) {
+      &:nth-child(2) {
         animation-delay: 1.3s;
       }
-      &:nth-of-type(3) {
-        animation-delay: 1.5s;
+      &:nth-child(3) {
+        animation-delay: 1.4s;
       }
     }
 
@@ -103,7 +105,7 @@
   animation-name: spincube;
   animation-timing-function: ease-in-out;
   animation-iteration-count: infinite;
-  animation-duration: 12s;
+  animation-duration: 10s;
   transform-style: preserve-3d;
   transform-origin: 100px 100px 0;
   margin-left: calc(50% - 100px);
