--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -106,3 +106,12 @@ textarea {
   animation-fill-mode: forwards;
   z-index: 20;
 }
+
+.leaflet-container {
+  // position: relative;
+  width: 100%;
+  height: 100%;
+  opacity: 0;
+  animation: backInRight 1s 1.2s;
+  animation-fill-mode: forwards;
+}
