--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -28,7 +28,8 @@ body {
   margin: 0;
   font-family: 300 11px/1.4 'Helvetica Neue', 'sans-serif';
   color: #444;
-  background: #002c43;
+  background: #2f445f;
+  // background: #002c43;
   // overflow: hidden;
   display: block;
 }
