--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -1,6 +1,7 @@
 .nav-bar {
   position: fixed;
-  background: #181818;
+  background: #252839;
+  // background: #181818;
   width: 60px;
   height: 100vh;
   //   position: absolute;
@@ -46,7 +47,8 @@
 
     .nav-home,
     .nav-about,
-    .nav-contact {
+    .nav-contact,
+    .nav-portofolio {
       width: 25px;
       font-size: 25px;
       transition: all 0.3s ease-in;
