--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -108,6 +108,8 @@ textarea {
   z-index: 20;
 }
 
+/* --------------------------------- Lraflet -------------------------------- */
+
 .leaflet-container {
   // position: relative;
   width: 100%;
