--- a/components/pages/about/About.module.scss
+++ b/components/pages/about/About.module.scss
@@ -50,19 +50,18 @@
       font-weight: 400;
       max-width: fit-content;
       line-height: 1.8rem;
-      animation-name: pulse;
-      animation-duration: 1s;
-      animation-fill-mode: forwards;
+      // animation-name: pulse;
+      // animation-duration: 1s;
 
-      &:nth-child(1) {
-        animation-delay: 1.2s;
-      }
-      &:nth-child(2) {
-        animation-delay: 1.3s;
-      }
-      &:nth-child(3) {
-        animation-delay: 1.4s;
-      }
+      // &:nth-child(1) {
+      //   animation-delay: 1.1s;
+      // }
+      // &:nth-child(2) {
+      //   animation-delay: 1.3s;
+      // }
+      // &:nth-child(3) {
+      //   animation-delay: 1.5s;
+      // }
     }
 
     &::before {
