add content box for card (soon)

--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -7,7 +7,7 @@
   //   position: absolute;
   top: 0;
   z-index: 3;
-  min-height: 500px;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -52,11 +52,7 @@
     .nav-portofolio {
       width: 25px;
       font-size: 25px;
-      transition: all 0.3s ease-in;
-
-      &:hover {
-        width: 60%;
-      }
+      // transition: all 0.3s ease-in;
     }
 
     .nav-desc {
