--- a/components/pages/portofolio/Portofolio.module.scss
+++ b/components/pages/portofolio/Portofolio.module.scss
@@ -1,42 +1,117 @@
 .portofolio-page {
+  display: flex;
+  min-height: 100vh;
+  position: fixed;
+
   .text-zone {
-    position: absolute;
-    left: 13%;
-    top: 50%;
-    transform: translateY(-50%);
-    width: 85%;
-    max-height: 90%;
+    min-height: 100vh;
+    // background: blue;
+    margin-left: 10%;
+    padding: 2%;
+    flex-basis: 35%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+
+    h1 {
+      color: #ffd700;
+      font-size: 5rem;
+      width: 100%;
+      // margin: 0;
+      font-family: 'Coolvetica';
+      font-weight: 400;
+      letter-spacing: 4px;
+
+      &::before {
+        content: '<div>';
+        font-family: 'La Belle Aurore';
+        color: #ffd700;
+        font-size: 1.8rem;
+        position: absolute;
+        margin-top: -40px;
+        opacity: 0.6;
+      }
+
+      &::after {
+        content: '</div>';
+        font-family: 'La Belle Aurore';
+        color: #ffd700;
+        font-size: 1.8rem;
+        position: absolute;
+        margin-top: -20px;
+        animation: fadeIn 1s 1.7s backwards;
+        opacity: 0.6;
+      }
+
+      .desc {
+        margin-top: 50px;
+        margin-left: 2rem;
+
+        p {
+          font-size: 1.5rem;
+          color: #fff;
+          font-family: sans-serif;
+          font-weight: 400;
+          max-width: fit-content;
+          line-height: 1.8rem;
+          animation: pulse 1s 1.2s;
+          letter-spacing: 0;
+          margin-top: 60px;
+
+          &::before {
+            content: '<p>';
+            font-family: 'La Belle Aurore';
+            color: #ffd700;
+            font-size: 1.8rem;
+            position: absolute;
+            margin-top: -40px;
+            opacity: 0.6;
+          }
+
+          &::after {
+            content: '</p>';
+            font-family: 'La Belle Aurore';
+            color: #ffd700;
+            font-size: 1.8rem;
+            position: absolute;
+            margin-top: 20px;
+            animation: fadeIn 1s 1.7s backwards;
+            opacity: 0.6;
+          }
+        }
+      }
+    }
   }
 
-  h1 {
-    color: #ffd700;
-    font-size: 53px;
-    margin: 0;
-    font-family: 'Coolvetica';
-    font-weight: 400;
-    letter-spacing: 4px;
+  .content-zone {
+    flex-basis: 60%;
+    color: #fff;
+    font-family: sans-serif;
 
-    &::before {
-      content: '<h1>';
-      font-family: 'La Belle Aurore';
-      color: #ffd700;
-      font-size: 18px;
-      position: absolute;
-      margin-top: -40px;
-      left: -10px;
-      opacity: 0.6;
-    }
+    .card-container {
+      margin: auto;
+      // margin-top: 20px;
+      width: 100%;
+      height: 100%;
+      background: white;
+      overflow: scroll;
 
-    &::after {
-      content: '</h1>';
-      font-family: 'La Belle Aurore';
-      color: #ffd700;
-      font-size: 18px;
-      position: absolute;
-      margin-top: 18px;
-      margin-left: -10px;
-      animation: fadeIn 1s 1.7s backwards;
-      opacity: 0.6;
+      p {
+        color: red;
+        font-size: 8rem;
+      }
+
+      /* Hide scrollbar for Chrome, Safari and Opera */
+      &::-webkit-scrollbar {
+        display: none;
+      }
+
+      /* Hide scrollbar for IE, Edge and Firefox */
+      // & {
+      //   -ms-overflow-style: none; /* IE and Edge */
+      //   scrollbar-width: none; /* Firefox */
+      // }
     }
   }
 }
