--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -52,12 +52,12 @@ textarea {
   width: 100%;
   will-change: contents;
   height: 90%;
-  min-height: 566px;
+  min-height: 100vh;
   position: absolute;
   opacity: 0;
-  top: 5%;
+  // top: 5%;
   margin: 0 auto;
-  z-index: 1;
+  // z-index: 1;
   transform-style: preserve-3d;
   animation: fadeIn 1s forwards;
   animation-delay: 1s;
