--- a/components/pages/about/About.module.scss
+++ b/components/pages/about/About.module.scss
@@ -49,7 +49,7 @@
       font-family: sans-serif;
       font-weight: 400;
       max-width: fit-content;
-      line-height: 1.8rem;
+      line-height: 2rem;
       // animation-name: pulse;
       // animation-duration: 1s;
 
@@ -62,6 +62,13 @@
       // &:nth-child(3) {
       //   animation-delay: 1.5s;
       // }
+
+      span {
+        a {
+          color: #ffd700;
+          font-style: italic;
+        }
+      }
     }
 
     &::before {
