--- a/components/pages/portofolio/Portofolio.module.scss
+++ b/components/pages/portofolio/Portofolio.module.scss
@@ -6,7 +6,7 @@
   .text-zone {
     min-height: 100vh;
     // background: blue;
-    margin-left: 10%;
+    margin: 0 2% 0 8%;
     padding: 2%;
     flex-basis: 35%;
     display: flex;
@@ -54,31 +54,35 @@
           font-family: sans-serif;
           font-weight: 400;
           max-width: fit-content;
-          line-height: 1.8rem;
+          line-height: 2.2rem;
           animation: pulse 1s 1.2s;
           letter-spacing: 0;
-          margin-top: 60px;
+          // margin-top: 60px;
 
-          &::before {
-            content: '<p>';
-            font-family: 'La Belle Aurore';
+          span {
             color: #ffd700;
-            font-size: 1.8rem;
-            position: absolute;
-            margin-top: -40px;
-            opacity: 0.6;
           }
+        }
 
-          &::after {
-            content: '</p>';
-            font-family: 'La Belle Aurore';
-            color: #ffd700;
-            font-size: 1.8rem;
-            position: absolute;
-            margin-top: 20px;
-            animation: fadeIn 1s 1.7s backwards;
-            opacity: 0.6;
-          }
+        &::before {
+          content: '<p>';
+          font-family: 'La Belle Aurore';
+          color: #ffd700;
+          font-size: 1.8rem;
+          position: absolute;
+          margin-top: -40px;
+          opacity: 0.6;
+        }
+
+        &::after {
+          content: '</p>';
+          font-family: 'La Belle Aurore';
+          color: #ffd700;
+          font-size: 1.8rem;
+          position: absolute;
+          margin-top: -5px;
+          animation: fadeIn 1s 1.7s backwards;
+          opacity: 0.6;
         }
       }
     }
@@ -86,20 +90,34 @@
 
   .content-zone {
     flex-basis: 60%;
-    color: #fff;
     font-family: sans-serif;
+    min-height: 100vh;
 
     .card-container {
       margin: auto;
       // margin-top: 20px;
       width: 100%;
       height: 100%;
-      background: white;
+      background: #252839;
       overflow: scroll;
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 10px;
+      animation: backInRight 1s 1.2s;
+      animation-fill-mode: forwards;
 
       p {
-        color: red;
+        color: #fff;
         font-size: 8rem;
+        padding: 0 2rem;
+        background: #2f445f;
+        transition: 0.3s;
+        cursor: pointer;
+
+        &:hover {
+          transform: translateY(-25px);
+        }
       }
 
       /* Hide scrollbar for Chrome, Safari and Opera */
@@ -108,10 +126,10 @@
       }
 
       /* Hide scrollbar for IE, Edge and Firefox */
-      // & {
-      //   -ms-overflow-style: none; /* IE and Edge */
-      //   scrollbar-width: none; /* Firefox */
-      // }
+      & {
+        -ms-overflow-style: none; /* IE and Edge */
+        scrollbar-width: none; /* Firefox */
+      }
     }
   }
 }
