--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables';
+
 .home-page {
   .text-zone {
     position: absolute;
@@ -9,7 +11,7 @@
   }
 
   h1 {
-    color: white;
+    color: #fff;
     font-size: 53px;
     margin: 0;
     font-family: 'Coolvetica';
@@ -19,7 +21,7 @@
     &::before {
       content: '<h1>';
       font-family: 'La Belle Aurore';
-      color: #ffd700;
+      color: $primary-color;
       font-size: 18px;
       position: absolute;
       margin-top: -40px;
@@ -30,7 +32,7 @@
     &::after {
       content: '</h1>';
       font-family: 'La Belle Aurore';
-      color: #ffd700;
+      color: $primary-color;
       font-size: 18px;
       position: absolute;
       margin-top: 18px;
@@ -51,14 +53,14 @@
   }
 
   .flat-button {
-    color: #ffd700;
+    color: $primary-color;
     font-size: 13px;
     font-weight: 400;
     letter-spacing: 4px;
     font-family: sans-serif;
     text-decoration: none;
     padding: 10px 18px;
-    border: 1px solid #ffd700;
+    border: 1px solid $primary-color;
     margin-top: 10px;
     float: left;
     animation: fadeIn 1s 2s backwards;
@@ -67,7 +69,7 @@
     cursor: pointer;
 
     &:hover {
-      background: #ffd700;
+      background: $primary-color;
       color: #333;
     }
   }
