--- a/layout/Layout.module.scss
+++ b/layout/Layout.module.scss
@@ -1,3 +1,5 @@
+@import 'styles/variables';
+
 .mains {
   width: 100%;
   height: 100%;
@@ -8,7 +10,7 @@
 
     .tags {
       position: absolute;
-      color: #ffd700;
+      color: $primary-color;
       opacity: 0.6;
       bottom: 0;
       left: 120px;
