--- a/components/pages/portofolio/Portofolio.module.scss
+++ b/components/pages/portofolio/Portofolio.module.scss
@@ -134,3 +134,46 @@
     }
   }
 }
+
+/* ------------------------------- RESPONSIVE ------------------------------- */
+
+@media (max-width: 884px) {
+  .portofolio-page {
+    flex-direction: column;
+    position: block;
+    overflow: scroll;
+  }
+
+  .content-zone {
+    width: 100%;
+    margin: 3%;
+    min-height: 0;
+    z-index: 10;
+
+    .card-container {
+      min-height: 110vh;
+    }
+  }
+}
+
+@media (max-width: 428px) {
+  .portofolio-page {
+    .text-zone {
+      margin-left: 20%;
+    }
+
+    .card-container {
+      justify-content: center;
+    }
+  }
+}
+
+@media (max-width: 320px) {
+  .portofolio-page {
+    .text-zone {
+      min-height: 110vh;
+      height: 100%;
+      margin-left: 20%;
+    }
+  }
+}
