--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -74,3 +74,30 @@
     }
   }
 }
+
+/* ------------------------------- RESPONSIVE ------------------------------- */
+@media (max-width: 885px) {
+  .home-page {
+    .text-zone {
+      position: block;
+      left: 20%;
+      // margin-left: 8%;
+      width: 100%;
+    }
+  }
+}
+
+@media (max-width: 430px) {
+  .home-page {
+    .text-zone {
+      position: block;
+      left: 20%;
+      // margin-left: 8%;
+      width: 100%;
+    }
+
+    h1 {
+      font-size: 4rem;
+    }
+  }
+}
