--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -108,6 +108,20 @@ textarea {
   z-index: -1;
 }
 
+// RESPONSIVE LOADER
+@media (max-width: 992px) {
+  .loader-active {
+    margin-top: 55%;
+  }
+}
+
+@media (max-width: 430px) {
+  .loader-active {
+    margin-top: 100%;
+    margin-left: 55%;
+  }
+}
+
 /* --------------------------------- Lraflet -------------------------------- */
 
 .leaflet-container {
