add responsive about page

--- a/components/animations/snow/Snow.module.scss
+++ b/components/animations/snow/Snow.module.scss
@@ -56,3 +56,10 @@
     }
   }
 }
+
+/* ------------------------------- RESPONSIVE ------------------------------- */
+@media (max-width: 430px) {
+  .snow-container {
+    display: none;
+  }
+}
