--- a/components/pages/about/About.module.scss
+++ b/components/pages/about/About.module.scss
@@ -179,3 +179,40 @@
     transform: rotateX(90deg);
   }
 }
+
+/* ------------------------------- RESPONSIVE ------------------------------- */
+
+@media (max-width: 884px) {
+  .stage-cube-cont {
+    margin-top: 250px;
+  }
+}
+
+@media (max-width: 820px) {
+  .stage-cube-cont {
+    margin-top: 300px;
+  }
+}
+
+@media (max-width: 770px) {
+  .stage-cube-cont {
+    margin-top: 250px;
+  }
+}
+
+@media (max-width: 430px) {
+  .stage-cube-cont {
+    display: none;
+  }
+
+  .about-page {
+    .text-zone {
+      position: absolute;
+      left: 20%;
+      top: 48%;
+      transform: translateY(-50%);
+      width: 70%;
+      max-height: 90%;
+    }
+  }
+}
