try to fix home page & sidebar

--- a/components/pages/contacts/Contact.module.scss
+++ b/components/pages/contacts/Contact.module.scss
@@ -272,10 +272,11 @@
       margin-top: 10vh;
       margin-bottom: 4vh;
       position: relative;
-      margin-left: 20px;
+      // margin-left: 20%;
       top: 0;
+      left: 20%;
       transform: none;
-      width: 100%;
+      width: 95%;
       max-height: 90%;
     }
 
