--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -88,6 +88,14 @@
 
 @media (max-width: 430px) {
   .home-page {
+    .text-zone {
+      position: relative;
+      // margin-top: 50%;
+      left: 20%;
+      width: 95%;
+      // height: 100%;
+    }
+
     h1 {
       font-size: 4rem;
     }
