add lottie animation

--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -8,70 +8,82 @@
     transform: translateY(-50%);
     width: 40%;
     max-height: 90%;
-  }
 
-  h1 {
-    color: #fff;
-    font-size: 53px;
-    margin: 0;
-    font-family: 'Coolvetica';
-    font-weight: 400;
-    letter-spacing: 2px;
+    h1 {
+      color: #fff;
+      font-size: 53px;
+      margin: 0;
+      font-family: 'Coolvetica';
+      font-weight: 400;
+      letter-spacing: 2px;
 
-    &::before {
-      content: '<h1>';
-      font-family: 'La Belle Aurore';
+      &::before {
+        content: '<h1>';
+        font-family: 'La Belle Aurore';
+        color: $primary-color;
+        font-size: 18px;
+        position: absolute;
+        margin-top: -40px;
+        left: -10px;
+        opacity: 0.6;
+      }
+
+      &::after {
+        content: '</h1>';
+        font-family: 'La Belle Aurore';
+        color: $primary-color;
+        font-size: 18px;
+        position: absolute;
+        margin-top: 18px;
+        margin-left: -10px;
+        animation: fadeIn 1s 1.7s backwards;
+        opacity: 0.6;
+      }
+    }
+
+    h2 {
+      color: #fff;
+      margin-top: 50px;
+      font-weight: 400;
+      font-size: 14px;
+      font-family: sans-serif;
+      letter-spacing: 3px;
+      animation: fadeIn 1s 1.8s backwards;
+    }
+
+    .flat-button {
       color: $primary-color;
-      font-size: 18px;
-      position: absolute;
-      margin-top: -40px;
-      left: -10px;
-      opacity: 0.6;
-    }
+      font-size: 13px;
+      font-weight: 400;
+      letter-spacing: 4px;
+      font-family: sans-serif;
+      text-decoration: none;
+      padding: 10px 18px;
+      border: 1px solid $primary-color;
+      margin-top: 10px;
+      float: left;
+      animation: fadeIn 1s 2s backwards;
+      transition: 0.3s ease-in;
+      white-space: nowrap;
+      cursor: pointer;
 
-    &::after {
-      content: '</h1>';
-      font-family: 'La Belle Aurore';
-      color: $primary-color;
-      font-size: 18px;
-      position: absolute;
-      margin-top: 18px;
-      margin-left: -10px;
-      animation: fadeIn 1s 1.7s backwards;
-      opacity: 0.6;
+      &:hover {
+        background: $primary-color;
+        color: #333;
+      }
     }
   }
 
-  h2 {
-    color: #fff;
-    margin-top: 50px;
-    font-weight: 400;
-    font-size: 14px;
-    font-family: sans-serif;
-    letter-spacing: 3px;
-    animation: fadeIn 1s 1.8s backwards;
-  }
-
-  .flat-button {
-    color: $primary-color;
-    font-size: 13px;
-    font-weight: 400;
-    letter-spacing: 4px;
-    font-family: sans-serif;
-    text-decoration: none;
-    padding: 10px 18px;
-    border: 1px solid $primary-color;
-    margin-top: 10px;
-    float: left;
-    animation: fadeIn 1s 2s backwards;
-    transition: 0.3s ease-in;
-    white-space: nowrap;
-    cursor: pointer;
-
-    &:hover {
-      background: $primary-color;
-      color: #333;
-    }
+  .image-zone {
+    position: absolute;
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 60%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    overflow: hidden;
   }
 }
 
@@ -82,6 +94,10 @@
       position: block;
       left: 20%;
       width: 95%;
+    }
+
+    .image-zone {
+      display: none;
     }
   }
 }
