--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -7,7 +7,7 @@
   position: fixed;
   width: 60px;
   top: 0;
-  min-height: 100vh;
+  height: 100%;
   background: $secondary-color;
   z-index: 3;
 
