add new-lottie & react parallax mouse

--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -85,6 +85,11 @@
     align-items: center;
     overflow: hidden;
   }
+
+  .parallax {
+    width: 100%;
+    min-height: 100vh;
+  }
 }
 
 /* ------------------------------- RESPONSIVE ------------------------------- */
