--- a/components/pages/portofolio/Portofolio.module.scss
+++ b/components/pages/portofolio/Portofolio.module.scss
@@ -99,7 +99,7 @@
       width: 100%;
       height: 100%;
       background: $secondary-color;
-      overflow: scroll;
+      overflow-y: scroll;
       display: flex;
       justify-content: space-evenly;
       flex-wrap: wrap;
