--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -53,7 +53,7 @@ textarea {
   height: 100%;
   will-change: contents;
   min-height: 100vh;
-  position: absolute;
+  // position: absolute;
   opacity: 0;
   // top: 5%;
   margin: 0 auto;
