--- a/components/pages/home/Home.module.scss
+++ b/components/pages/home/Home.module.scss
@@ -61,6 +61,7 @@
       text-decoration: none;
       padding: 10px 18px;
       border: 1px solid $primary-color;
+      background: transparent;
       margin-top: 10px;
       float: left;
       animation: fadeIn 1s 2s backwards;
