fix: fix cover project

--- a/components/Sidebar/Sidebar.module.scss
+++ b/components/Sidebar/Sidebar.module.scss
@@ -63,6 +63,13 @@
         svg {
           opacity: 0;
         }
+
+        &::after {
+          content: '';
+          height: 80px;
+          width: 100%;
+          color: aliceblue;
+        }
       }
 
       & .active {
